<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:id="@+id/ly_game_activity">

    <TextView
        android:id="@+id/questions_count"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/puntaje_game"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/puntaje_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questions_count" />

    <TextView
        android:id="@+id/respuesta_correcta_game"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/respuestas_correctas_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questions_count" />

    <TextView
        android:id="@+id/respuestas_incorrectas_game"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/respestas_incorrectas_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questions_count" />

    <TextView
        android:id="@+id/preguntas_game"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="428dp"
        android:text="@string/preguntas_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/respuestas_incorrectas_game"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/respuesta_correcta_game" />

    <LinearLayout
        android:id="@+id/linearly_register"
        android:layout_width="406dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preguntas_game" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:paddingHorizontal="15dp"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rdbtn_res1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_1"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rdbtn_res2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/respuesta_2"
                android:layout_marginTop="10dp"
                />

            <RadioButton
                android:id="@+id/rdbtn_res3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_3"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                />

            <RadioButton
                android:id="@+id/rdbtn_res4"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_4"
                android:textColor="@color/white"
                />
        </RadioGroup>

        <Button
            android:id="@+id/btn_confir"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/confirmar"
            android:textSize="20sp"
            android:background="@drawable/new_style"
            android:textColor="@color/primary_light"
            app:backgroundTint="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>