<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="450dp"
        android:layout_height="269dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/imagen_de_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulo_medio_circulo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/formulario_de_registro"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/new_style"
                android:autofillHints="@string/registro_NombreUsuario"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/registro_NombreUsuario"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/new_style"
                android:autofillHints="@string/registro_nombre"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/registro_nombre"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/editTextApellido"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/registro_apellido"
                android:background="@drawable/new_style"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/registro_apellido"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/editContraseña"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/new_style"
                android:autofillHints="@string/registro_contraseña"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/registro_contraseña"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elevation="5dp"
                android:text="@string/terminos_condiciones"/>

            <Button
                android:id="@+id/finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/new_button"
                android:elevation="5dp"
                android:text="@string/registro_finalizar"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
