<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_light"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    android:theme="@style/Theme.Login"
    tools:context=".HomeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/imagen_del_home"
                android:src="@drawable/quiz" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/descrition_home"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/imagen_del_home"
                android:src="@drawable/choose" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/descripcion_juego"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/new_style"
            android:text="@string/jugar"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/new_style"
            android:text="@string/limpiar_datos"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"/>

    </LinearLayout>

</LinearLayout>
